fix: move modal to the front and prevent slider buttons overlap

--- a/src/components/image/ImageModal.css
+++ b/src/components/image/ImageModal.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 20;
   .modal {
     position: relative;
     background: transparent;
@@ -48,5 +49,14 @@
     .swiper-button-next::after {
       font-size: 1.5rem;
     }
+  }
+}
+
+@media (max-width: 480px) {
+  .swiper-button-prev {
+    left: 4px;
+  }
+  .swiper-button-next {
+    right: 4px;
   }
 }
